<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintTop_toTopOf="@id/header"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/header_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@id/arrow_back"
            app:layout_constraintTop_toTopOf="@id/header"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16">
        </TextView>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_search_button"
            app:layout_constraintEnd_toEndOf="@id/header"
            app:layout_constraintTop_toTopOf="@id/header"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_12"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/user1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/user_pic1"
            app:layout_constraintStart_toStartOf="@id/card1"
            app:layout_constraintTop_toTopOf="@id/card1">
        </ImageView>
        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card1_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toEndOf="@id/user1"
            app:layout_constraintTop_toTopOf="@id/card1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card1_time"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@id/user1"
            app:layout_constraintTop_toBottomOf="@id/name1"
            android:layout_marginStart="@dimen/dp_16">
        </TextView>
        <TextView
            android:id="@+id/card1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card1_comment"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/card1"
            app:layout_constraintEnd_toEndOf="@id/card1"
            app:layout_constraintTop_toBottomOf="@id/user1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card1_replays"
            android:textSize="@dimen/sp_10"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@id/user1"
            app:layout_constraintTop_toBottomOf="@id/card1_text"
            android:layout_marginTop="@dimen/dp_8">
        </TextView>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:src="@drawable/ic_thumb_up_outline"
            app:layout_constraintEnd_toEndOf="@id/card1"
            app:layout_constraintTop_toBottomOf="@id/card1_text"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card1"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_12"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/user_pic2"
            app:layout_constraintStart_toStartOf="@id/card2"
            app:layout_constraintTop_toTopOf="@id/card2">
        </ImageView>
        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card2_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toEndOf="@id/user2"
            app:layout_constraintTop_toTopOf="@id/card2"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card2_time"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@id/user2"
            app:layout_constraintTop_toBottomOf="@id/name2"
            android:layout_marginStart="@dimen/dp_16">
        </TextView>
        <TextView
            android:id="@+id/card2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card2_comment"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/card2"
            app:layout_constraintEnd_toEndOf="@id/card2"
            app:layout_constraintTop_toBottomOf="@id/user2"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card2_replays"
            android:textSize="@dimen/sp_10"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@id/user2"
            app:layout_constraintTop_toBottomOf="@id/card2_text"
            android:layout_marginTop="@dimen/dp_8">
        </TextView>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:src="@drawable/ic_thumb_up_outline"
            app:layout_constraintEnd_toEndOf="@id/card2"
            app:layout_constraintTop_toBottomOf="@id/card2_text"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card2"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_12"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/user3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/user_pic3"
            app:layout_constraintStart_toStartOf="@id/card3"
            app:layout_constraintTop_toTopOf="@id/card3">
        </ImageView>
        <TextView
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card3_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toEndOf="@id/user3"
            app:layout_constraintTop_toTopOf="@id/card3"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card3_time"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@id/user3"
            app:layout_constraintTop_toBottomOf="@id/name3"
            android:layout_marginStart="@dimen/dp_16">
        </TextView>
        <TextView
            android:id="@+id/card3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card3_comment"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/card3"
            app:layout_constraintEnd_toEndOf="@id/card3"
            app:layout_constraintTop_toBottomOf="@id/user3"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card3_replays"
            android:textSize="@dimen/sp_10"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@id/user3"
            app:layout_constraintTop_toBottomOf="@id/card3_text"
            android:layout_marginTop="@dimen/dp_8">
        </TextView>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:src="@drawable/ic_thumb_up_outline"
            app:layout_constraintEnd_toEndOf="@id/card3"
            app:layout_constraintTop_toBottomOf="@id/card3_text"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_shopping"
            app:layout_constraintStart_toStartOf="@id/footer"
            app:layout_constraintTop_toTopOf="@id/footer"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_15"
            />
        <ImageButton
            android:id="@+id/book_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_book_open_variant"
            app:layout_constraintStart_toEndOf="@id/shopping"
            app:layout_constraintTop_toTopOf="@id/shopping"
            android:layout_marginStart="@dimen/dp_48"
            />
        <ImageButton
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_cart"
            app:layout_constraintStart_toEndOf="@id/book_open"
            app:layout_constraintTop_toTopOf="@id/shopping"
            android:layout_marginStart="@dimen/dp_48"
            />
        <ImageButton
            android:id="@+id/tag_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_tag_heart"
            app:layout_constraintStart_toEndOf="@id/cart"
            app:layout_constraintTop_toTopOf="@id/shopping"
            android:layout_marginStart="@dimen/dp_48"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/tag_heart"
            app:layout_constraintTop_toTopOf="@id/footer"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_6">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart_filled"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_heart"
                android:textSize="@dimen/sp_14"
                android:layout_gravity="center"
                android:textColor="@color/blue">
            </TextView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>